# commit-emoji

./: .commit-emoji.toml  .wakatime-project  CHANGELOG.md  Cargo.toml  README.md
src/: commit.rs  config.rs  hook.rs  main.rs  repo.rs
